Fix & Revert & Add/Remove strings

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1392,6 +1392,7 @@
   "NotifyGodAlive": "Inform players at meetings that God is still alive",
   "TransporterTeleportMax": "Max number of teleports",
   "TriggerKill": "Kill",
+  "ExperimentalRoleIndicator": "    <color=#ffff00>EXPERIMENTAL</color>",
   "RequiresPetIndicator": "  <#ff0000>PET</color>",
   "SupportsPetIndicator": "    <#00ff00>✓PET</color>",
   "SupportsPetMessage": "\\n\\n<#00ff00>[✓] This role supports Pet button usage for ability triggers or other actions, maybe replacing venting, shapeshifting or killing.</color>",
@@ -3437,7 +3438,13 @@
   "Shifter": "Shifter",
   "ShifterInfo": "Steal Someone's Role",
   "ShifterInfoLong": "(Neutrals):\\nAs the Shifter, you must steal someone's role by using your pet button near them. Depending on the settings, you may also steal their progress in their role and ability uses, and their add-ons.\\nIf you have this role when the game ends, you lose!",
-  "Shifter.TrySwapBasis": "Swap Role Basis <#ffff00>(EXPERIMENTAL)</color>",
+  "Tremor": "Tremor",
+  "TremorInfo": "When Doom Happens, Everyone is Doomed",
+  "TremorInfoLong": "(Neutral):\\nAs the Tremor, you see a timer below your name indicating when doom happens. When you kill, the timer decreases. If doom happens, you kill everyone that comes near you, and you have a specified amount of time to kill everyone, otherwise you suicide.",
+  "Tremor.TimerStart": "Time Until Doom Happens",
+  "Tremor.TimerDecrease": "When Killing, Timer Decreases by",
+  "Tremor.DoomTime": "Doom Time (= Time to Kill Everyone)",
+  "Tremor.DoomNotify": "Doom started! The Tremor now kills everyone that comes near them!",
   "Rogue": "Rogue",
   "RogueInfo": "Complete Objectives, Get Rewards",
   "RogueInfoLong": "(Neutral):\\nAs the Rogue, you get an objective with a reward each round. You can optionally complete the objective to get the reward.",
