--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -4036,6 +4036,27 @@
   "OracleCheck.Imp": "Appears to be an Impostor",
   "OracleCheck": "Target Results:",
   "FailChance": "Chance of showing incorrect result",
+  "ToiletMaster": "Toilet Master",
+  "ToiletMasterInfo": "Place Toilets",
+  "ToiletMasterInfoLong": "(Crewmates):\\nAs the Toilet Master, you can place toilets around the map. When a player uses a toilet, they will get a random effect based on their poop.",
+  "TM.ToiletDuration": "Toilets Disappear After",
+  "TM.ToiletVisibility": "Toilet Visibility Mode For Other Players After Placing",
+  "TM.ToiletUseRadius": "Toilet Use Radius",
+  "TM.ToiletUseTime": "Toilet Use Time",
+  "TM.BrownPoopSpeedBoost": "Brown Poop Speed Boost",
+  "TM.GreenPoopRadius": "Green Poop Radius",
+  "TM.RedPoopRadius": "Red Poop Radius",
+  "TM.RedPoopRoleBlockDuration": "Red Poop Role Block Duration",
+  "TM.PurplePoopNotifyOnKillAttempt": "Purple Poop Notify On Kill Attempt",
+  "TM.BrownPoopDuration": "Brown Poop Duration",
+  "TM.GreenPoopDuration": "Green Poop Duration",
+  "TM.RedPoopDuration": "Red Poop Duration",
+  "TM.PurplePoopDuration": "Purple Poop Duration",
+  "TM.BrownPoopButtonText": "Place Brown Poop",
+  "TM.GetPoopNotify": "You've got {0} Poop",
+  "TM.GreenPoopKiller": "There is a killer near you",
+  "TM.GreenPoop": "There is no killer near you",
+  "TM.TryKillNotify": "Someone tried to kill you",
   "ChameleonCanVent": "Vent to disguise",
   "ChameleonInvisState": "You are disguising!",
   "ChameleonInvisStateOut": "Your disguise ended",
@@ -4232,6 +4253,8 @@
   "WinnerRoleText.SoulHunter": "Soul Hunter Wins!",
   "WinnerRoleText.Tiger": "Tiger Wins!",
   "WinnerRoleText.Specter": "Phantom Wins!",
+  "WinnerRoleText.Hider": "Hiders Win!",
+  "WinnerRoleText.Seeker": "Seekers Win!",
   "WinnerRoleText.Default": "{0} Wins!",
   "AdditionalWinnerRoleText.Sidekick": "along with Sidekicks",
   "AdditionalWinnerRoleText.Opportunist": "The Opportunist survived",
