--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -10,6 +10,8 @@
   "SubText.Impostor": "Sabotage and kill everyone",
   "SubText.Neutral": "A team on their own",
   "SubText.Madmate": "Help the <color=#ff1919>Impostors</color>",
+  "SubText.LovingCrewmate": "You are in love with {0}",
+  "SubText.LovingImpostor": "You're an <#ff1919>Impostor</color>, but also in love with {0}",
   "TypeImpostor": "Impostors",
   "TypeCrewmate": "Crewmates",
   "TypeNeutral": "Neutrals",
@@ -18,6 +20,8 @@
   "TeamNeutral": "Neutral",
   "TeamCrewmate": "Crewmate",
   "TeamMadmate": "Madmate",
+  "TeamLovingCrewmate": "Lover",
+  "TeamLovingImpostor": "Loving Impostor",
   "Neutral": "Neutral",
   "YouAreCrewmate": "<size=1.7><color=#ffffff>TEAM:</color> CREWMATES</size>",
   "YouAreImpostor": "<size=0>.</size>",
@@ -594,7 +598,6 @@
   "ClumsyInfo": "You trip while walking",
   "MischievousInfo": "You can sabotage",
   "UnreportableInfo": "Your body can't be reported",
-  "RogueInfo": "Work against your team and win with other Rogues",
   "LuckyInfo": "Dodge attackers",
   "DoubleShotInfo": "You have an extra life when guessing",
   "RascalInfo": "You appear evil in some cases",
@@ -1348,6 +1351,11 @@
   "LoverSuicide": "<color=#ff9ace>Lovers</color> die together",
   "NumberOfLovers": "Number of <color=#ff9ace>Lover Pairs</color> (x2 members)",
   "LoverKnowRoles": "<color=#ff9ace>Lovers</color> know the roles of each other",
+  "LegacyLovers": "Legacy Lovers",
+  "LovingImpostorSpawnChance": "<color=#ff9ace>Loving</color> <#ff1919>Impostor</color> Spawn Chance",
+  "PrivateChat": "Enable Private Chat for Lovers",
+  "CannotBeGuessed": "<color=#ff9ace>Lovers</color> Cannot Be Guessed",
+  "GuessLovers": "Sorry, <color=#ff9ace>Lovers</color> cannot be guessed.",
   "TrapperBlockMoveTime": "Freeze time",
   "RogueKnowEachOtherRoles": "<color=#696969>Rogues</color> know the roles of each other",
   "RogueKnowEachOther": "<color=#696969>Rogues</color> know each other",
