Private Chat for Lovers & Fix stuff

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1353,8 +1353,9 @@
   "LoverKnowRoles": "<color=#ff9ace>Lovers</color> know the roles of each other",
   "LegacyLovers": "Legacy Lovers",
   "LovingImpostorSpawnChance": "<color=#ff9ace>Loving</color> <#ff1919>Impostor</color> Spawn Chance",
-  "PrivateChat": "Enable Private Chat for Lovers",
-  "CannotBeGuessed": "<color=#ff9ace>Lovers</color> Cannot Be Guessed",
+  "PrivateChat": "Enable Private Chat for Lovers <#ffff00>(VERY EXPERIMENTAL!!!!)</color>",
+  "GuessAbility": "Guessers Can Guess Lovers",
+  "Untouched": "Untouched",
   "GuessLovers": "Sorry, <color=#ff9ace>Lovers</color> cannot be guessed.",
   "GuessVanillaCrewmate": "Did you seriously just try to guess someone as vanilla crewmate?! Shame on you!",
   "TrapperBlockMoveTime": "Freeze time",
