add CHEESE & strings & fix chat

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2938,6 +2938,12 @@
   "PlagueDoctorInfectInactiveTime": "Meeting Infection Onset Delay",
   "PlagueDoctorCanInfectSelf": "Can Infect Self",
   "PlagueDoctorCanInfectVent": "Can Infect While In Vent",
+  "LovingCrewmate": "Lover",
+  "LovingCrewmateInfo": "Stay alive and win together!",
+  "LovingCrewmateInfoLong": "(Crewmates):\\nAs the Lover, your goal is to stay alive until the end of the game and help your lover win.\\nIf your lover dies, you will die as well.",
+  "LovingImpostor": "Loving Impostor",
+  "LovingImpostorInfo": "Stay alive and win together!",
+  "LovingImpostorInfoLong": "(Impostors):\\nAs the Loving Impostor, your goal is to stay alive until the end of the game and help your lover win.\\nIf your lover dies, you will die as well.\\nHowever, you're also an impostor! You can win either way, but you must keep your lover alive.",
   "Enderman": "Enderman",
   "EndermanInfo": "Teleport Back And Forth",
   "EndermanInfoLong": "(Neutral):\\nAs the Enderman, you can sabotage/pet your pet to mark the position where you're currently standing. You'll teleport back to that position after a specified amount of time.",
