--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -4215,6 +4215,8 @@
   "WinnerRoleText.Specter": "Phantom Wins!",
   "WinnerRoleText.Hider": "Hiders Win!",
   "WinnerRoleText.Seeker": "Seekers Win!",
+  "WinnerRoleText.Taskinator": "Taskinator Wins!",
+  "WinnerRoleText.Fox": "Fox Wins!",
   "WinnerRoleText.Default": "{0} Wins!",
   "AdditionalWinnerRoleText.Sidekick": "along with Sidekicks",
   "AdditionalWinnerRoleText.Opportunist": "The Opportunist survived",
