--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -4216,7 +4216,7 @@
   "WinnerRoleText.Hider": "Hiders Win!",
   "WinnerRoleText.Seeker": "Seekers Win!",
   "WinnerRoleText.Taskinator": "Taskinator Wins!",
-  "WinnerRoleText.Fox": "Fox Wins!",
+  "WinnerRoleText.Troll": "Troll Wins!",
   "WinnerRoleText.Default": "{0} Wins!",
   "AdditionalWinnerRoleText.Sidekick": "along with Sidekicks",
   "AdditionalWinnerRoleText.Opportunist": "The Opportunist survived",
