--- a/Resources/Lang/pt_BR.json
+++ b/Resources/Lang/pt_BR.json
@@ -958,13 +958,13 @@
   "SuffixMode": "Sufixo",
   "SuffixMode.None": "Nenhum",
   "SuffixMode.Version": "Versão",
-  "SuffixMode.Streaming": "Transmitindo",
+  "SuffixMode.Streaming": "Ao Vivo",
   "SuffixMode.Recording": "Gravando",
   "SuffixMode.RoomHost": "Anfitrião",
   "SuffixMode.OriginalName": "Nome",
   "SuffixMode.DoNotKillMe": "Não me mate",
   "SuffixMode.NoAndroidPlz": "Sem Celulares",
-  "SuffixMode.AutoHost": "Auto-Anfitrião",
+  "SuffixMode.AutoHost": "Auto-Moderação",
   "SuffixModeText.DoNotKillMe": "Não me mate!",
   "SuffixModeText.NoAndroidPlz": "Sem Celulares, ok?",
   "SuffixModeText.AutoHost": "Hospedando",
