Fixes + Add settings, Add Guardian Angel

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -985,6 +985,7 @@
   "GhostIgnoreTasks": "Ghosts Exempt From Tasks",
   "DisableTaskWin": "Disable Task Win",
   "DisableTaskWinIfAllCrewsAreDead": "Disable Task Win If All <#8cffff>Crewmates</color> Are Dead",
+  "DisableTaskWinIfAllCrewsAreConverted": "Disable Task Win If All <#8cffff>Crewmates</color> Are <#ffab1b>Converted</color>",
   "CanSabotage": "Can Sabotage",
   "HideGameSettings": "Hide Game Settings",
   "DIYGameSettings": "Enable only custom /n messages",
@@ -2659,6 +2660,18 @@
   "Sentry.Notify.Shapeshifted": "{0} shapeshifted into {1} in your monitored room",
   "Sentry.Notify.Vented": "{0} vented in your monitored room",
   "Sentry.Notify.InvalidRoom": "You are not in a room",
+  "Sentry.UsableDevicesForInfoView": "Devices Players Can Use to Get Info About Monitored Room",
+  "Sentry.AdditionalDevicesForInfoView": "Map-Specific Devices Players Can Use to Get Info About Monitored Room",
+  "Sentry.TeamsCanSeeInfo.Crewmate": "<#8cffff>Crewmates Can See the Info</color>",
+  "Sentry.TeamsCanSeeInfo.Impostor": "<#ff1919>Impostors Can See the Info</color>",
+  "Sentry.TeamsCanSeeInfo.NK": "<#ffab1b>Neutral</color> <#ff1919>Killers</color> Can See the Info</color>",
+  "Sentry.TeamsCanSeeInfo.NNK": "<#ffff00>Non-Killing</color> <#ffab1b>Neutrals</color> Can See the Info</color>",
+  "Cameras": "Cameras",
+  "Admin": "Admin",
+  "CamerasAndAdmin": "Cameras & Admin",
+  "DoorLog": "Door Log",
+  "Binoculars": "Binoculars",
+  "DoorLogAndBinoculars": "Door Log & Binoculars",
   "Dynamo": "Dynamo",
   "DynamoInfo": "You get faster by walking",
   "DynamoInfoLong": "(Add-ons):\\nAs the Dynamo, you get faster by walking. The longer you walk, the faster you get. Stopping will reset your speed.",
