--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3792,6 +3792,9 @@
   "Bloodmoon.Suffix": "<{1}>You will die in <{2}>{0}s</color></color>",
   "Bloodmoon.Speed": "<#ff1919>Bloodmoon</color> Speed",
   "Prefix.Bloodmoon": "Bloodmoon",
+  "GA": "Guardian Angel",
+  "GAInfo": "Protect Crewmates",
+  "GAInfoLong": "(Crewmates):\\nAs the Guardian Angel, you can protect someone to save them from being killed. This is the vanilla Guardian Angel role, but as an add-on.",
   "Haunter": "Haunter",
   "HaunterInfo": "You're the Impostors' Worst Nightmare",
   "HaunterInfoLong": "(Neutrals):\\nAs the Haunter, when you complete all of your tasks, a random living impostor's name will show in red to everyone in meetings. When you have 1 task left, all impostors will get an arrow pointing towards you, and if any of them come close to you, you lose this role.",
@@ -3862,6 +3865,13 @@
   "OptionAvenger": "Can sell Avenger",
   "TwisterCooldown": "Twist Cooldown",
   "TwisterButtonText": "Twist",
+  "Abyssbringer": "Abyssbringer",
+  "AbyssbringerInfo": "Place Black Holes",
+  "AbyssbringerInfoLong": "(Impostors):\\nAs the Abyssbringer, you can place black holes. Black holes will suck in players and kill them when colliding with them.",
+  "BlackHolePlaceCooldown": "Black Hole Place Cooldown",
+  "BlackHoleDespawnMode": "Black Hole Despawn Mode",
+  "BlackHoleMovesTowardsNearestPlayer": "Black Hole Moves Towards Nearest Player",
+  "BlackHoleMoveSpeed": "Black Hole Moving Speed",
   "Sleep": "Sleep",
   "SleepInfo": "You Sleep During Lights Out",
   "SleepInfoLong": "(Add-ons):\\nYou sleep during lights out. You can't see anything, and you cannot move. You can only wake up when the lights are back on. If someone with the Glow add-on comes near you, you fully wake up and lose this add-on.",
