--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2662,8 +2662,8 @@
   "Sentry.Notify.InvalidRoom": "You are not in a room",
   "Sentry.UsableDevicesForInfoView": "Devices Players Can Use to Get Info About Monitored Room",
   "Sentry.AdditionalDevicesForInfoView": "Map-Specific Devices Players Can Use to Get Info About Monitored Room",
-  "Sentry.TeamsCanSeeInfo.Crewmate": "<#8cffff>Crewmates Can See the Info</color>",
-  "Sentry.TeamsCanSeeInfo.Impostor": "<#ff1919>Impostors Can See the Info</color>",
+  "Sentry.TeamsCanSeeInfo.Crewmate": "<#8cffff>Crewmates</color> Can See the Info</color>",
+  "Sentry.TeamsCanSeeInfo.Impostor": "<#ff1919>Impostors</color> Can See the Info</color>",
   "Sentry.TeamsCanSeeInfo.NK": "<#ffab1b>Neutral</color> <#ff1919>Killers</color> Can See the Info</color>",
   "Sentry.TeamsCanSeeInfo.NNK": "<#ffff00>Non-Killing</color> <#ffab1b>Neutrals</color> Can See the Info</color>",
   "Cameras": "Cameras",
@@ -2941,6 +2941,9 @@
   "EnigmaClueLevelTitle": "Enigma Level Clue!",
   "EnigmaClueFriendCodeTitle": "Enigma Friend Code Clue!",
   "EnigmaClueTitle": "Enigma Clue!",
+  "ZombieSpeedReduceInterval": "Speed Reduction Interval",
+  "ZombieInitialSpeed": "Initial Speed",
+  "ZombieMinimumSpeed": "Minimum Speed",
   "GuesserSuicides": "Guessers Suicide When Trying to Guess Players With <#BAAAE9>Onbound</color>",
   "PlagueDoctor": "Infection",
   "PlagueDoctorInfo": "Spread the infection!",
