Add your suggestions

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1338,6 +1338,7 @@
   "SniperPrecisionShooting": "Precise Shooting",
   "SniperAimAssist": "Aim Assist",
   "SniperAimAssistOneshot": "One shot Assist",
+  "RandomONImpRole": "Random Enabled Imp Role",
   "NameDisplayAddons": "Display Add-Ons next to the role name",
   "NoLimitAddonsNumMax": "Max Add-ons Per Player",
   "LoverSpawnChances": "Spawn Chance of <color=#ff9ace>Lovers</color>",
@@ -3427,6 +3428,9 @@
   "AidInfoLong": "(Crewmates):\\nAs the Aid, you may use your kill button on someone to protect them from direct attacks temporarily. Neither you nor your target will know if someone tried to kill your target.",
   "AidDur": "Shield Duration",
   "AidCD": "Shield Cooldown",
+  "AidTargetKnowsAboutShield": "Targets Know They're Shielded",
+  "AidCounterSelf": "<#00ffa5>You're shielded for </color>{0}s",
+  "AidCounterTarget": "{0} <#00ffa5>is shielded for </color>{1}s",
   "GuessManagerRole": "Guess Manager",
   "GuessManagerRoleInfo": "Receive Additional Info About Guesses",
   "GuessManagerRoleInfoLong": "(Crewmates):\\nAs the Guess Manager, you know the roles of guessed players, and if someone misguesses, you'll see that.",
