--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2656,7 +2656,7 @@
   "Sentry.CannotSeeInfoDuringComms": "Cannot See Info During Comms Sabotages",
   "Sentry.Suffix.MonitoredRoom": "<size=80%>This room is monitored by the {0}</size>",
   "Sentry.Suffix.Self": "<size=70%>Monitoring: <#00ffa5>{0}</color></size>",
-  "Sentry.Notify.Info": "<u>Info about your monitored room:</u>\\nPlayers: {0}\\nDead players: {1}",
+  "Sentry.Notify.Info": "<u>Info about {0}:</u>\\nPlayers: {1}\\nDead players: {2}",
   "Sentry.Notify.Info.NoData": "<#ff0000>none</color>",
   "Sentry.Notify.Shapeshifted": "{0} shapeshifted into {1} in your monitored room",
   "Sentry.Notify.Vented": "{0} vented in your monitored room",
