--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2072,6 +2072,7 @@
   "Warning.NoModHost": "EHR is not installed on the host",
   "Warning.MismatchedVersion": "<b>{0}</b> has a different version than <b>{1}</b>",
   "Warning.AutoExitAtMismatchedVersion": "The host has no or a different version of {0}\\nYou will be kicked in {1}",
+  "Warning.OneMinuteLeft": "<#ffff00>The lobby will close in 1 minute!</color>",
   "UnsupportedVersion": "Unsupported Among Us version.\\nPlease update Among Us.",
   "Error.MeetingException": "Error: {0}\\r\\nPlease use SHIFT+M+ENTER to end the meeting",
   "Error.InvalidRoleAssignment": "Error: Invalid role found for a player during role assignment({0})",
@@ -3045,6 +3046,7 @@
   "CameraMan": "Camera Man",
   "CameraManInfo": "View Cameras anytime",
   "CameraManInfoLong": "(Crewmates):\\nAs the Camera Man, you can vent/pet to instantly teleport to the security room.",
+  "TPBackWhenMoveAway": "Teleport Back When Moving Away From Cameras",
   "NiceHacker": "Hacker",
   "NiceHackerInfo": "Watch Admin Table from anywhere",
   "NiceHackerInfoLong": "(Hacker):\\nThis role is different for modded clients and vanilla clients.\\n\\nAs a modded client, whenever you open the map (and have ability uses left), the admin map will show up. You may be able to move while having the map open depending on settings.\\n\\nAs a vanilla client, you may enter a vent/pet your pet to get a notification saying how many people are in different rooms on the ship (essentially admin map).",
