New role Echo, Fix settings menu not opening on main menu

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3047,6 +3047,10 @@
   "CameraManInfo": "View Cameras anytime",
   "CameraManInfoLong": "(Crewmates):\\nAs the Camera Man, you can vent/pet to instantly teleport to the security room.",
   "TPBackWhenMoveAway": "Teleport Back When Moving Away From Cameras",
+  "Echo": "Echo",
+  "EchoInfo": "Make Players Die Where You Want",
+  "EchoInfoLong": "(Impostors):\\nAs the Echo, you can shapeshift into a player to swap locations and skins with them. During the shapeshift, your target cannot move. When you unshift, the swap reverts and the target dies exactly where you were.\\n\\nYou cannot kill normally.",
+  "EchoShapeshiftButtonText": "Control",
   "NiceHacker": "Hacker",
   "NiceHackerInfo": "Watch Admin Table from anywhere",
   "NiceHackerInfoLong": "(Hacker):\\nThis role is different for modded clients and vanilla clients.\\n\\nAs a modded client, whenever you open the map (and have ability uses left), the admin map will show up. You may be able to move while having the map open depending on settings.\\n\\nAs a vanilla client, you may enter a vent/pet your pet to get a notification saying how many people are in different rooms on the ship (essentially admin map).",
