Make these things colorful

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1355,7 +1355,7 @@
   "LoverKnowRoles": "<color=#ff9ace>Lovers</color> know the roles of each other",
   "LegacyLovers": "Legacy Lovers",
   "LovingImpostorSpawnChance": "<color=#ff9ace>Loving</color> <#ff1919>Impostor</color> Spawn Chance",
-  "LIRoleForOtherImps": "Other Impostors see Loving Impostor role as",
+  "LIRoleForOtherImps": "Other <#ff1919>Impostors</color> see <#ff9ace>Loving</color> <#ff1919>Impostor</color> as",
   "PrivateChat": "Enable Private Chat for Lovers <#ffff00>(VERY EXPERIMENTAL!!!!)</color>",
   "GuessAbility": "Guessers Can Guess Lovers",
   "Untouched": "Untouched",
