--- a/Resources/Lang/pt_BR.json
+++ b/Resources/Lang/pt_BR.json
@@ -2555,9 +2555,9 @@
   "RandomizerNotifyOpt": "Notificar quando o evento da RNG aparecer (desligar se os eventos forem frequentes)",
   "MadmateCanFindMarshall": "Mostrar para os <#ff1919>Cúmplices</color>",
   "DoesntSpawnOnFungle": "Não aparece quando o mapa é <color=#ffa646>Fungle</color>",
-  "Blackmailer": "Silenciador",
-  "BlackmailerInfo": "Controle os votos dos jogadores",
-  "BlackmailerInfoLong": "(Impostores):\\\\nComo Controlador de votos, você pode marcar jogadores clicando uma vez no seu botão matar. Votos de Jogadores Marcados serão redirecionados para quem o Controlador de Votos votar. Clique duplo mata o jogador normalmente.",
+  "Blackmailer": "Chantagista",
+  "BlackmailerInfo": "Chantageie outros jogadores",
+  "BlackmailerInfoLong": "(Impostores):\\\\nComo Chantagista você pode marcar jogadores clicando uma vez no seu botão matar. Votos de Jogadores Marcados serão redirecionados para quem o Chantagista. Clique duplo mata o jogador normalmente.",
   "DGRM.None": "Nenhum",
   "DGRM.OnMeeting": "Na Reunião",
   "DGRM.AfterTime": "Temporizador",
