New roles Clairvoyant & Safeguard, Improve role assignment, add notifies when RpcCheckAndMurder fails

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1643,6 +1643,21 @@
   "CrewCanBeInLove": "<color=#8cffff>Crewmates</color> can be <color=#ff9ace>in love</color>",
   "NeutralCanBeInLove": "<color=#ffab1b>Neutrals</color> can be <color=#ff9ace>in love</color>",
   "HexesLookLikeSpells": "<color=#ff00ff>Hexes</color> appear as <color=#ff1919>spells</color>",
+  "AddictWarning": "<#ffff00>You must vent soon or you'll suicide!</color>",
+  "DoppelgangerWarning": "<#ffff00>The Doppelganger swapped skins with you!</color>",
+  "CheckMurderFail": "<#ff0000>The murder was canceled due to the following reason:\\n</color>",
+  "SameCTATeam": "The player you attacked is in the same custom team as you",
+  "JackalSidekick": "This Jackal/Sidekick/Recruit interaction is not allowed",
+  "ContagiousPlayers": "Contagious players cannot kill each other",
+  "MadmateKillImpostor": "Madmates cannot kill Impostors",
+  "ImpostorKillMadmate": "Impostors cannot kill Madmates",
+  "PenguinVictimKill": "As the victim of the Penguin/Goose, you cannot interact with others",
+  "MathematicianProtected": "This player was the first to answer the Mathematician's question correctly,\\ntherefore they're shielded",
+  "RefugeeKillImpostor": "Renegades cannot kill Impostors",
+  "GAGuarded": "This player is shielded by the Guardian Angel",
+  "TraitorKillImpostor": "As the Traitor, you cannot kill Impostors",
+  "KnightedKillMonarch": "As the Knighted player, you cannot kill the Monarch",
+  "SomeSortOfProtection": "This player is shielded due to a role-specific action",
   "HexButtonText": "Hex",
   "EscapeeAbilityButtonText": "TP",
   "ObliviousBaitImmune": "Immune to <color=#00f7ff>Bait</color>",
@@ -3441,6 +3456,7 @@
   "AidTargetKnowsAboutShield": "Targets Know They're Shielded",
   "AidCounterSelf": "<#00ffa5>You're shielded for </color>{0}s",
   "AidCounterTarget": "{0} <#00ffa5>is shielded for </color>{1}s",
+  "MinTasksToActivateAbility": "Minimum Number of Tasks Completed to Activate Ability",
   "GuessManagerRole": "Guess Manager",
   "GuessManagerRoleInfo": "Receive Additional Info About Guesses",
   "GuessManagerRoleInfoLong": "(Crewmates):\\nAs the Guess Manager, you know the roles of guessed players, and if someone misguesses, you'll see that.",
@@ -3716,6 +3732,14 @@
   "PhysicistInfo": "Grants Portable Vitals Access",
   "PhysicistInfoLong": "\\nGrants portable vitals access for crewmate roles.",
   "Prefix.Physicist": "Physicist",
+  "Clairvoyant": "Clairvoyant",
+  "ClairvoyantInfo": "Know Remaining Killer Counts",
+  "ClairvoyantInfoLong": "(Crewmates):\\nAs the Clairvoyant, you can see the remaining impostor and neutral killer counts by entering a vent or petting your pet.",
+  "Safeguard": "Safeguard",
+  "SafeguardInfo": "You Get a Temporary Shield by Completing Tasks",
+  "SafeguardInfoLong": "(Crewmates):\\nAs the Safeguard, you get a temporary shield with each task you complete.",
+  "SafeguardSuffixTimer": "<#00ffa5>You're shielded for</color> <b>{0}</b>s",
+  "SafeguardSuffix": "<#00ffa5>You're shielded</color>",
   "Freezer": "Freezer",
   "FreezerInfo": "Freeze Players",
   "FreezerInfoLong": "(Impostors):\\nAs the Freezer, you can shapeshift into a player to freeze them. The frozen player cannot move for a set amount of time.",
