Fix Junk String, Remove some unused strings +more
I fixed 'SidekickSettings' junk string.
Also I removed all Pirate strings and Konan strings (who is Konan lol) and some unused Jackal strings. And some Maverick strings...
And the final change - I made 'Guesser doesn't die on misguess' setting yellow, instead of white (#f3e304)

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -20,8 +20,6 @@
   "TeamNeutral": "Neutral",
   "TeamCrewmate": "Crewmate",
   "TeamMadmate": "Madmate",
-  "TeamLovingCrewmate": "Lover",
-  "TeamLovingImpostor": "Loving Impostor",
   "Neutral": "Neutral",
   "YouAreCrewmate": "<size=1.7><color=#ffffff>TEAM:</color> CREWMATES</size>",
   "YouAreImpostor": "<size=0>.</size>",
@@ -231,7 +229,6 @@
   "Pelican": "Pelican",
   "Revolutionist": "Revolutionist",
   "FFF": "Hater",
-  "Konan": "Konan",
   "Gamer": "Demon",
   "DarkHide": "Stalker",
   "Workaholic": "Workaholic",
@@ -253,7 +250,6 @@
   "Virus": "Virus",
   "Pursuer": "Pursuer",
   "Phantom": "Specter",
-  "Pirate": "Pirate",
   "Jinx": "Jinx",
   "Maverick": "Maverick",
   "CursedSoul": "Cursed Soul",
@@ -523,7 +519,6 @@
   "PelicanInfo": "Eat all players",
   "RevolutionistInfo": "Recruit players to win with you",
   "FFFInfo": "Kill <color=#ff9ace>Lovers</color> and <color=#00a4ff>Neptunes</color>",
-  "KonanInfo": "Still on a date with Xiaoling...",
   "GamerInfo": "Consume blood volumes",
   "DarkHideInfo": "Your kills cause power outages",
   "WorkaholicInfo": "Finish all tasks to solo win!",
@@ -545,7 +540,6 @@
   "VirusInfo": "Kill and infect everyone",
   "PursuerInfo": "Protect yourself and live to the end!",
   "PhantomInfo": "Get killed and finish your tasks to win!",
-  "PirateInfo": "Select target to duel during the Meeting!",
   "JinxInfo": "Reflect attacks onto your attackers",
   "MaverickInfo": "Survive until the end to win",
   "CursedSoulInfo": "Snatch souls and steal the win",
@@ -777,7 +771,6 @@
   "VirusInfoLong": "(Neutrals):\\nThe virus' goal is to eliminate other players. When a crewmate is killed, their corpse is infected, and the reporting crewmate joins the virus team or dies if the virus isn't voted out. The Virus team wins if they outnumber the Crewmate team.",
   "PursuerInfoLong": "(Neutrals):\\nAs the Pursuer, you can use your ability on someone to make them shoot a blank when they try to kill (= reset their kill cooldown).\\n\\nTo win, just survive to the end of the game.",
   "PhantomInfoLong": "(Neutrals):\\nAs the Specter, your job is to get killed and finish your tasks.\\nYou can do your tasks while alive.\\nYou cannot win if you're alive.\\nIf you get killed, you win with the winning team if your tasks are completed.",
-  "PirateInfoLong": "(Neutrals):\\nAs the Pirate, use your kill button to select a target every round. You will duel with your target when in a meeting. If both the Pirate and the target choose the same number Pirate wins.\\nAdditionally, if Pirate wins the duel, or Target doesn't duel Target will suicide.\\n\\nDueling command:- /duel X (where X can be 0, 1 or 2)\\n\\nYou win after winning a certain number of duels set by the host.",
   "JinxInfoLong": "(Neutrals):\\nAs the Jinx, whenever you are attacked, you jinx them, resulting in them dying to a jinx.\\nThis has limited uses.\\n\\nKill off everyone to win.",
   "MaverickInfoLong": "(Neutrals):\\nAs the Maverick, you can kill much like a Serial Killer.\\n\\nHowever, you win with the winning team rather than alone.\\nIf you die, you lose.",
   "CursedSoulInfoLong": "(Neutrals):\\nAs the Cursed Soul, you snatch the victory if you survive to the end of the game.\\n\\nYou can snatch the win from a Jester or Executioner.\\n\\nAdditionally, you can snatch the souls of other players.\\nSoulless players win with you and count as dead.",
@@ -880,7 +873,7 @@
   "AdditionalEmergencyCooldownTime": "Additional Cooldown",
   "LadderDeath": "Fall From Ladders",
   "LadderDeathChance": "Fall To Death Chance",
-  "GuesserDoesntDieOnMisguess": "Guesser Doesn't Die on Misguess",
+  "GuesserDoesntDieOnMisguess": "<color=#f3e304>Guesser Doesn't Die on Misguess</color>",
   "DisableTasks": "Disable Tasks",
   "DisableSwipeCardTask": "Disable Swipe Card Task",
   "DisableSubmitScanTask": "Disable Submit Scan Task",
@@ -1131,8 +1124,6 @@
   "ShowNKRemainOnEject": "Show remaining <color=#ffab1b>Neutral Killers</color> on ejects",
   "ConfirmEgoistOnEject": "Confirm <color=#5600ff>Egoists</color> on ejection",
   "ConfirmLoversOnEject": "Confirm <color=#ff9ace>Lovers</color> on ejection",
-  "ConfirmSidekickOnEject": "Confirm <color=#00b4eb>Sidekicks</color> on ejection",
-  "ConfirmRogueOnEject": "Confirm <color=#696969>Mavericks</color> on ejection",
   "HideBittenRolesOnEject": "Hide roles of <color=#7b8968>bitten<color> players on ejection",
   "ShowTeamNextToRoleNameOnEject": "Show what team the ejected player's role is on",
   "Addon": "Add-on",
@@ -1157,7 +1148,6 @@
   "MenuTitle.GuesserModeRoles": "★ Roles and Add-ons for Guesser Mode ★",
   "MenuTitle.CTA": "★ Custom Team Assignment ★",
   "ShieldPersonDiedFirst": "Shield the person who got killed first in the last game",
-  "JackalWinWithSidekick": "<color=#00b4eb>Jackal</color> can win with <color=#00b4eb>Sidekick</color>'s team",
   "SidekickKnowOtherSidekick": "<color=#00b4eb>Sidekicks</color> know each other",
   "SidekickKnowOtherSidekickRole": "<color=#00b4eb>Sidekicks</color> know the roles of other <color=#00b4eb>Sidekicks</color>",
   "SidekickCanKillSidekick": "<color=#00b4eb>Sidekicks</color> can kill other <color=#00b4eb>Sidekicks</color>",
@@ -1199,11 +1189,6 @@
   "OutOfAbilityUsesDoMoreTasks": "<color=#ffff00>Out of ability uses! Do tasks to get more!</color>",
   "AbilityUseLimit": "Initial Ability Use Limit",
   "SniperCanKill": "<color=#ff1919>Sniper</color> can kill with bullets remaining",
-  "CrewmatesCanBeSidekick": "<color=#8cffff>Crewmates</color> can be <color=#00b4eb>Sidekick</color>",
-  "NeutralsCanBeSidekick": "<color=#ffab1b>Neutrals</color> can be <color=#00b4eb>Sidekick</color>",
-  "ImpostorsCanBeSidekick": "<color=#ff1919>Impostors</color> can be <color=#00b4eb>Sidekick</color>",
-  "JackalCanKillSidekick": "<color=#00b4eb>Jackal</color> can kill <color=#00b4eb>Sidekick</color>",
-  "SidekickCanKillJackal": "<color=#00b4eb>Sidekick</color> can kill <color=#00b4eb>Jackal</color>",
   "EvenAfterWinning": "Even After Satisfying Win Condition",
   "ImpostorVision": "Has <color=#ff1919>Impostor</color> Vision",
   "CanUseSabotage": "Can Sabotage",
@@ -1500,11 +1485,9 @@
   "SidekickCountMode.None": "Nothing",
   "SidekickCountMode.Jackal": "<color=#00b4eb>Jackal</color>",
   "SidekickCountMode.Original": "Original Team",
-  "SidekickAssignMode": "<color=#00b4eb>Sidekick</color> Assign Mode",
-  "SidekickAssignMode.SidekickAndRecruit": "<color=#00b4eb>Sidekick</color>+<color=#00b4eb>Recruit</color>",
-  "SidekickAssignMode.Sidekick": "<color=#00b4eb>Sidekick</color> Only",
-  "SidekickAssignMode.Recruit": "<color=#00b4eb>Recruit</color> Only",
   "ContagiousCountMode": "<color=#2E8B57>Contagious</color> players count as",
+  "JackalCanKillSidekick": "<color=#00b4eb>Jackal</color> can kill <color=#00b4eb>Sidekick</color>",
+  "SidekickCanKillJackal": "<color=#00b4eb>Sidekick</color> can kill <color=#00b4eb>Jackal</color>",
   "ContagiousCountMode.None": "Nothing",
   "ContagiousCountMode.Virus": "<color=#2E8B57>Virus</color>",
   "ContagiousCountMode.Original": "Original Team",
@@ -1637,8 +1620,7 @@
   "ResetKillCooldownWhenPlayerGetKilled": "Reset kill cooldown if someone gets killed by another player",
   "ResetKillCooldownOn": "Kill Cooldown On Reset",
   "JackalCanRecruitSidekick": "Can recruit <color=#00b4eb>Sidekick</color>",
-  "JackalSidekickRecruitLimit": "Maximum Number Of Recruits",
-  "SidekickCanWinWithOriginalTeam": "<color=#00b4eb>Sidekicks</color> can win with original team",
+  "SidekickSettings": "Show Sidekick Settings",
   "ImpCanBeInLove": "<color=#ff1919>Impostors</color> can be <color=#ff9ace>in love</color>",
   "CrewCanBeInLove": "<color=#8cffff>Crewmates</color> can be <color=#ff9ace>in love</color>",
   "NeutralCanBeInLove": "<color=#ffab1b>Neutrals</color> can be <color=#ff9ace>in love</color>",
@@ -4135,16 +4117,7 @@
   "ImpCanBeRole": "<color=#ff1919>Impostors</color> can become {role}",
   "CrewCanBeRole": "<color=#8cffff>Crewmates</color> can become {role}",
   "NeutralCanBeRole": "<color=#ffab1b>Neutrals</color> can become {role}",
-  "PirateTryHideMsg": "Hide <color=#EDC240>Pirate</color>'s commands",
   "SuccessfulDuelsToWin": "Number of successful duels needed to win",
-  "PirateMeetingMsg": "Duel with your target.\\n\\n Duel command :-\\n⦿ /duel 0 (to select rock)\\n⦿ /duel 1 (to select Paper)\\n⦿ /duel 2 (to select Scissors)\\n\\nYou win if you choose same option as the target",
-  "PirateTargetMeetingMsg": "Pirate chose you as their target!! Duel with Pirate to save your life.\\n\\n Duel command :-\\n⦿ /duel 0 (to select rock)\\n⦿ /duel 1 (to select Paper)\\n⦿ /duel 2 (to select Scissors)\\n\\nIf Pirate chooses same option as you or you don't duel you DIE.",
-  "PirateTitle": "【 ★ Message from Pirate ★ 】",
-  "PirateTargetAlreadyChosen": "You have already chosen a target in this round",
-  "PirateDead": "You are dead, you cannot duel anymore",
-  "DuelAlreadyDone": "You have already chosen an option for the duel.",
-  "DuelDone": "You chose【{0}】for the duel.",
-  "DuelHelp": "Duel command :-\\n⦿ /duel 0 (to select Rock)\\n⦿ /duel 1 (to select Paper)\\n⦿ /duel 2 (to select Scissors)",
   "PlagueBearerCD": "Plague cooldown",
   "PestilenceCD": "<color=#343136>Pestilence</color> Kill cooldown",
   "PlagueBearerAlreadyPlagued": "Player has already been plagued",
